fix extra padding that was throwing off alignment

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -2,6 +2,7 @@
     width: @sidebar_width;
     float: right;
     padding: @gap;
+    padding-right: 0;
 }
 
 .sidebar-box {
